tests/tests/errors/2006-9.vb
'#compiler-options:/debug:
'#compiler-message:Command line error BC2006 : option 'debug' requires ':pdbonly|full'
'#exit-code:1